Use dict in Database/UniverseInfo, stub checker, requestCheck, startCheck
