# borValBadgeDbServer/controllers/user_controller.py
@@ -7,7 +7,8 @@ from typing import Union
 from borValBadgeDbServer.models.database import Database  # noqa: E501
 from borValBadgeDbServer.models.user_request_check_get200_response import UserRequestCheckGet200Response  # noqa: E501
 from borValBadgeDbServer import util
-from borValBadgeDbServer.db.db import dbLock, cachedBadgeDB
+from borValBadgeDbServer.db.db import dbLock, cachedBadgeDB, badgeDB
+from borValBadgeDbServer.db.checker import checkInProgress, startCheck
 
 
 def user_dump_dbget():  # noqa: E501
@@ -40,4 +41,15 @@ def user_request_check_get(universe_id):  # noqa: E501
 
     :rtype: Union[UserRequestCheckGet200Response, Tuple[UserRequestCheckGet200Response, int], Tuple[UserRequestCheckGet200Response, int, Dict[str, str]]
     """
-    return 'do some magic!'
+
+    universe_id = str(universe_id)
+    dbLock.acquire()
+    lastChecked = 0
+    if universe_id in badgeDB.universes:
+        lastChecked = badgeDB.universes[universe_id].last_checked
+    dbLock.release()
+
+    if util.getTimestamp() - lastChecked >= 5 * 60 * 1000:
+        startCheck(universe_id)
+
+    return UserRequestCheckGet200Response(lastChecked, checkInProgress(universe_id))
